--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,5 +1,44 @@
+@mixin btn-base {
+	padding: 0.25rem 1.5rem;
+	border-radius: 0.25rem;
+}
+
+@mixin btn-sm-modify {
+	font-size: 0.75rem;
+	padding: 0.1rem 1rem;
+}
+
 $color-main: #0075ff;
 
 .btn-main {
+	@include btn-base();
 	background-color: $color-main;
+	color: white;
+	border: solid 1px $color-main;
+
+	&:hover {
+		background-color: white;
+		color: $color-main;
+	}
+
+	&-s {
+		@extend .btn-main;
+		@include btn-sm-modify();
+	}
+}
+
+.btn-sec {
+	@include btn-base();
+	color: #000000;
+	background-color: transparent;
+	border: none;
+
+	&:hover {
+		color: #888;
+	}
+
+	&-s {
+		@extend .btn-sec;
+		@include btn-sm-modify();
+	}
 }
