--- a/css/styles.css
+++ b/css/styles.css
@@ -29,4 +29,10 @@
   padding: 0.1rem 1rem;
 }
 
+.main-menu li {
+  font-size: 0.5rem;
+  list-style: none;
+  display: inline;
+}
+
 /*# sourceMappingURL=styles.css.map */
