--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -42,3 +42,11 @@ $color-main: #0075ff;
 		@include btn-sm-modify();
 	}
 }
+
+.main-menu {
+	li {
+		font-size: 0.5rem;
+		list-style: none;
+		display: inline;
+	}
+}
