--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -50,3 +50,13 @@ $color-main: #0075ff;
 		display: inline;
 	}
 }
+
+.icon-sm {
+	i {
+		font-size: 0.75rem;
+		padding: 0.25rem;
+		color: $color-main;
+		border-radius: 50%;
+		box-shadow: 0 0 10px #00000040;
+	}
+}
