--- a/sass/globals.scss
+++ b/sass/globals.scss
@@ -1,3 +1,5 @@
+@use 'components';
+
 body {
 	padding: 0px;
 	margin: 0px;
@@ -12,6 +14,26 @@ body {
 	border-bottom: solid 1px #ddd;
 }
 
-.logo img {
+.logo a img {
 	max-width: 7rem;
+}
+
+.sec-home {
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	max-width: 768px;
+	margin: auto;
+	padding: 5rem;
+	align-items: center;
+	.home-cta {
+		flex: 1;
+		.cta-text {
+			color: components.$color-main;
+		}
+		.home-title {
+			width: 20rem;
+			font-size: 3rem;
+		}
+	}
 }
