--- a/css/styles.css
+++ b/css/styles.css
@@ -54,27 +54,29 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2509803922);
 }
 
-.feature {
+.benefit {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
-.feature .icon {
+.benefit i {
   color: #0075ff;
-  font-size: 10rem;
+  font-size: 7.5rem;
+  text-align: center;
 }
-.feature .description .title {
+.benefit .description .title {
   font-size: 2rem;
+  text-align: center;
 }
-.feature .description .text {
+.benefit .description .text {
   color: #888;
   font-weight: 600;
+  text-align: center;
 }
-.feature .cta {
+.benefit .cta {
   margin-top: 3rem;
   color: #0075ff;
   font-weight: 600;
+  text-align: center;
 }
 
 .icon-desc {
@@ -94,15 +96,19 @@
   font-weight: 600;
 }
 
+html {
+  min-width: 100vw;
+}
+
 body {
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 .nav {
   display: flex;
-  justify-content: space-around;
   align-items: center;
+  justify-content: space-around;
   width: 100%;
   height: 4rem;
   border-bottom: solid 1px #ddd;
@@ -114,7 +120,6 @@ body {
 
 .sec-home {
   display: flex;
-  justify-content: center;
   align-items: center;
   width: 100%;
   max-width: 992px;
@@ -131,8 +136,14 @@ body {
   width: 20rem;
   font-size: 3rem;
 }
+.sec-home .home-cta .home-description {
+  width: 300px;
+}
+.sec-home .home-cta .lead-magnet .input-col {
+  max-width: 200px;
+}
 
-.sec-features {
+.sec-features, .sec-benefits .intro {
   width: 100%;
   max-width: 992px;
   margin: auto;
@@ -141,43 +152,50 @@ body {
   flex-direction: column;
   align-items: center;
 }
-.sec-features .intro {
+.sec-features .intro, .sec-benefits .intro .intro {
   text-align: center;
 }
-.sec-features .intro h3 {
+.sec-features .intro h3, .sec-benefits .intro .intro h3 {
   font-size: 1.8rem;
 }
-.sec-features .intro p {
+.sec-features .intro p, .sec-benefits .intro .intro p {
   font-size: 0.8rem;
   color: #888;
 }
-.sec-features .features {
+.sec-features .features, .sec-benefits .intro .features {
   display: flex;
   gap: 1rem;
   align-items: center;
-  margin: auto;
 }
-.sec-features .features .text {
+.sec-features .features .text, .sec-benefits .intro .features .text {
   padding: 2rem 0;
   flex: 1;
 }
-.sec-features .features .text .feature {
+.sec-features .features .text .feature, .sec-benefits .intro .features .text .feature {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-.sec-features .features .text .feature .description {
+.sec-features .features .text .feature .description, .sec-benefits .intro .features .text .feature .description {
   margin-left: 1rem;
   max-width: 20rem;
 }
-.sec-features .features .text .feature .description .description-title {
+.sec-features .features .text .feature .description .description-title, .sec-benefits .intro .features .text .feature .description .description-title {
   font-size: 1.15rem;
 }
-.sec-features .features .text .feature .description .description-text {
+.sec-features .features .text .feature .description .description-text, .sec-benefits .intro .features .text .feature .description .description-text {
   font-size: 1rem;
 }
-.sec-features .features .image {
+.sec-features .features .image img, .sec-benefits .intro .features .image img {
   max-width: 20rem;
+}
+
+.sec-benefits {
+  border-top: 1px solid #ddd;
+}
+.sec-benefits .benefit-cards {
+  width: 100%;
+  padding: 0 2rem 2rem 2rem;
 }
 
 /*# sourceMappingURL=styles.css.map */
