--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -71,28 +71,30 @@ $color-main: #0075ff;
 	}
 }
 
-.feature {
+.benefit {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	.icon {
+	i {
 		color: $color-main;
-		font-size: 10rem;
+		font-size: 7.5rem;
+		text-align: center;
 	}
 	.description {
 		.title {
 			font-size: 2rem;
+			text-align: center;
 		}
 		.text {
 			color: #888;
 			font-weight: 600;
+			text-align: center;
 		}
 	}
 	.cta {
 		margin-top: 3rem;
 		color: $color-main;
 		font-weight: 600;
+		text-align: center;
 	}
 }
 
