--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -9,6 +9,7 @@
 }
 
 $color-main: #0075ff;
+$color-footer: #f4f8fe;
 
 .btn-main {
 	@include btn-base();
@@ -103,13 +104,13 @@ $color-main: #0075ff;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	.icon {
+	i {
 		color: $color-main;
 		font-size: 10rem;
 		padding: 0;
 	}
 	.title {
-		margin-top: -2rem;
+		margin-top: -1rem;
 		font-size: 1.5rem;
 		font-weight: 600;
 	}
